
ElasticSearch-Carrot2 Change Log

================ ElasticSearch-Carrot2 1.1.0 [unreleased] ================

New features

* The size of the clustering controller's component pool is adjustable using
  the configuration file (controller.pool-size option).  

Bug Fixes

* GH-1: Front-page example visualizations fail with Lingo3G.

Other

* Update base ES dependency to 0.90.2

* Verified threading (clustering runs on the search thread), added 
  simple stress testing.

================ ElasticSearch-Carrot2 1.0.1 ================

Bug Fixes

* GH-1: Front-page example visualizations fail with Lingo3G.

================ ElasticSearch-Carrot2 1.0.0 ================

First open source release.