@@ -639,11 +639,21 @@ $.post("/test/test/_search_with_clusters", JSON.stringify(request), function(res
                   <code>{path.conf}/elasticsearch.json</code>,<br/>
                   <code>{path.conf}/elasticsearch.properties</code></dt>
               <dd>
-                <p>Main ES configuration file with plugin-specific settings.</p>
+                <p>The main ES configuration file can be used to enable/ disable the plugin
+                  and to tweak the resources assiogned to clustering requests.</p>
 
                 <dl class="dl-horizontal">
                   <dt><code>carrot2.enabled</code></dt>
                   <dd>If set to <code>false</code> disables the plugin, even if it is installed.</dd>
+                </dl>
+                <dl class="dl-horizontal">
+                  <dt><code>threadpool.search.*</code></dt>
+                  <dd>Clustering requests are executed on the search threadpool inside ES. It may be
+                    necessary to tune the settings of this threadpool to limit the number of concurrent
+                    clustering requests to the number of computational cores on the node (clustering
+                    is CPU-intense). See <a href="http://www.elasticsearch.org/guide/reference/modules/threadpool/">
+                    the relevant threadpool</a> documentation section in ES.
+                  </dd>
                 </dl>
               </dd>
 
