@@ -94,7 +94,8 @@
       <div class="row" style="margin-top: 10px;">
         <div class="span1"><span class="step">3</span></div>
         <div class="span11 dropped">
-          Finally, check out <a href="examples.html">clustering query/response REST API</a> examples.
+          Finally, check out the <a href="examples.html">clustering query/response REST API examples
+          and more thorough documentation</a>.
         </div>
       </div>
 
